fix: Spacing and don't show error if there are risk results

--- a/src/components/tx/security/redefine/RedefineBalanceChange/styles.module.css
+++ b/src/components/tx/security/redefine/RedefineBalanceChange/styles.module.css
@@ -1,5 +1,5 @@
 .balanceChanges {
-  padding: var(--space-1) var(--space-2);
+  padding: var(--space-2);
   max-height: 300px;
   overflow-y: auto;
   align-items: center;
@@ -10,6 +10,10 @@
   border-radius: 6px;
   align-items: center;
   margin-bottom: 6px;
+}
+
+.balanceChange:last-child {
+  margin-bottom: 0;
 }
 
 .nftId {
